--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
 
 </head>
 
-<body>
+
+
+
+    <body>
+
+
+
+
+
     <div class="row">
-        <div class="small-12-columns ">
+        <div class="small-12-columns ">  <h1>Design Hub</h1>
             <div class="nav">
                 <ul>
                     <li><a href="#About">ABOUT </a></li>
@@ -60,9 +68,9 @@
         <div class="small-12-column"  id="About">
             <h1>About </h1>
 
+<p>lorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sit</p>
 
 
-        <i class="fa fa-angle-double-down fa-3x" aria-hidden="true"></i>
         </div>
     </div>
 
