--- a/index.html
+++ b/index.html
@@ -18,97 +18,21 @@
 
 
     <body>
+<div class="row">
+<div class="small-12 column"id="nav">
 
+    <ul>
+    <li><a hrefe="#">Home</a></li>
+    <li><a hrefe="#">About</a></li>
+    <li><a hrefe="#">Members</a></li>
+    <li><a hrefe="#">Portfolio</a></li>
+    <li><a hrefe="#">Blog</a></li>
+    <li><a hrefe="#">Contact</a></li>
+    </ul>
 
-
-
-
-    <div class="row">
-        <div class="small-12-columns ">  <h1>Design Hub</h1>
-            <div class="nav">
-                <ul>
-                    <li><a href="#About">ABOUT </a></li>
-                    <li><a href="#members"> MEMBERS</a></li>
-                    <li><a href="#Contact">CONTACT</a></li>
-                    <li><a href="#portfolio">PORTFOLIO</a></li>
-                    <li><a href="#blog">BLOG</a></li>
-                </ul>
-
-            </div>
-        </div>
-
-
-
-
-    <div class="row">
-        <div class="small-12-column"  id="member">
-            <h1>Member</h1>
-
-
-
-
-  </div>
+    </div>
 
 </div>
-<i class="fa fa-angle-double-down fa-3x" aria-hidden="true"></i>
-        </div>
-        <div class="small-12-column" id="portfolio">
-            <h1>Portfolio</h1>
-
-            <img src="images/snowcap.jpg">
-            <img src="images/YS4_5968_69_70-2-3.jpg">
-            <img src="images/photo-by-mario-calvo.jpg">
-            <img src="images/">
-
-            <i class="fa fa-angle-double-down fa-3x" aria-hidden="true"></i>
-        </div>
-
-
-    <div class="row">
-        <div class="small-12-column"  id="About">
-            <h1>About </h1>
-
-<p>lorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sit</p>
-
-
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="small-12-column" id="blog">
-            <h1>Blog</h1>
-            <p>lorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sitlorem ipsum dolla sit</p>
-        </div></div>
-          <div class="row">
-        <div class="small-12-column"  id="Contact">
-            <h1>Contact</h1>
-
-
-        </div>
-
-    </div>
-    <form>
-
-  <div class="row">
-    <div class="large-6 columns">
-      <label>
-        <input type="text" placeholder="First name" />
-      </label>
-    </div>
-       <div class="large-6 columns">
-      <label>
-        <input type="text" placeholder="email" />
-      </label>
-    </div>
-      <div class="large-12-column comments">
-      <label>
-        <textarea placeholder="comment here"></textarea>
-      </label>
-    </div>
-  </div>
-</form>
-<a href="#" class="button">submit</a><br>
-
 
 
     <script src="js/vendor/jquery.js"></script>
