--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Design hub</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 
 </head>
 
@@ -21,18 +21,35 @@
 <div class="row">
 <div class="small-12 column"id="nav">
 
+
     <ul>
     <li><a hrefe="#">Home</a></li>
     <li><a hrefe="#">About</a></li>
-    <li><a hrefe="#">Members</a></li>
-    <li><a hrefe="#">Portfolio</a></li>
-    <li><a hrefe="#">Blog</a></li>
-    <li><a hrefe="#">Contact</a></li>
+    <li><a href="#">Members</a></li>
+    <li><a href="#">Portfolio</a></li>
+    <li><a href ="#">Blog</a></li>
+    <li><a href="#">Contact</a></li>
     </ul>
 
     </div>
-
+<div class="small-12 column"id="about">
+    <h1>Design Hub</h1>
+    <h4>Where perfection meets talent </h4>
+    </div>
 </div>
+ <div class="row">
+        <div class="small-12 column"id="portfolio">
+    <h2>Portfolio</h2>
+
+
+
+            <img src="images/img1.jpg">
+            <img src="images/img2.jpg">
+            <img src="images/img3.jpg">
+            <img src="images/img4.jpg">
+
+    </div>
+        </div>
 
 
     <script src="js/vendor/jquery.js"></script>
