--- a/index.html
+++ b/index.html
@@ -42,11 +42,30 @@
     <h2>Portfolio</h2>
 
 
-
-            <img src="images/img1.jpg">
+            <figure>                       <img src="images/img1.jpg">
             <img src="images/img2.jpg">
             <img src="images/img3.jpg">
             <img src="images/img4.jpg">
+                </figure>
+
+
+    </div>
+        </div>
+        <div class="row">
+        <div class="small-12 column"id="members">
+    <h2>Members</h2>
+
+    </div>
+        </div>
+        <div class="row">
+        <div class="small-12 column"id="Blog">
+    <h2>Blog</h2>
+
+    </div>
+        </div>
+        <div class="row">
+        <div class="small-12 column"id="Contact">
+    <h2>Contact</h2>
 
     </div>
         </div>
