--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <li><a hrefe="#">Home</a></li>
     <li><a hrefe="#">About</a></li>
     <li><a href="#">Members</a></li>
-    <li><a href="#">Portfolio</a></li>
+    <li><a href="#portfolio">Portfolio</a></li>
     <li><a href ="#">Blog</a></li>
     <li><a href="#">Contact</a></li>
     </ul>
