--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <img src="images/img2.jpg">
             <img src="images/img3.jpg">
             <img src="images/img4.jpg">
+                 <img src="images/img5.jpg">
                 </figure>
 
 
