--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
     <h2>Portfolio</h2>
 
 
-            <figure>                       <img src="images/img1.jpg">
-            <img src="images/img2.jpg">
-            <img src="images/img3.jpg">
-            <img src="images/img4.jpg">
-                 <img src="images/img5.jpg">
+            <figure>                       <img src="images/pic1.jpg">
+            <img src="images/pic2.jpg">
+            <img src="images/pic3.jpg">
+           
                 </figure>
 
 
