--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="css/component.css" />
 
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,14 +25,20 @@
 <div class="small-12 column"id="nav">
 
 
-    <ul>
-    <li><a hrefe="#">Home</a></li>
-    <li><a hrefe="#">About</a></li>
-    <li><a href="#">Members</a></li>
-    <li><a href="#portfolio">Portfolio</a></li>
-    <li><a href ="#">Blog</a></li>
-    <li><a href="#">Contact</a></li>
-    </ul>
+  <section class="section section--menu" id="Bagot">
+
+				<span class="link-copy"></span>
+				<nav class="menu menu--bagot">
+					<ul class="menu__list">
+						<li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
+						<li class="menu__item"><a href="#" class="menu__link">Gallery</a></li>
+						<li class="menu__item"><a href="#" class="menu__link">Clients</a></li>
+						<li class="menu__item"><a href="#" class="menu__link">Shop</a></li>
+						<li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+					</ul>
+				</nav>
+
+			</section>
 
     </div>
 <div class="small-12 column"id="about">
@@ -45,6 +54,7 @@
             <figure>                       <img src="images/pic1.jpg">
             <img src="images/pic2.jpg">
             <img src="images/pic3.jpg">
+                 <img src="images/pic4.jpg">
            
                 </figure>
 
@@ -69,6 +79,44 @@
 
     </div>
         </div>
+<script src="js/classie.js"></script>
+		<script src="js/clipboard.min.js"></script>
+		<script>
+		(function() {
+			[].slice.call(document.querySelectorAll('.menu')).forEach(function(menu) {
+				var menuItems = menu.querySelectorAll('.menu__link'),
+					setCurrent = function(ev) {
+						ev.preventDefault();
+
+						var item = ev.target.parentNode; // li
+
+						// return if already current
+						if (classie.has(item, 'menu__item--current')) {
+							return false;
+						}
+						// remove current
+						classie.remove(menu.querySelector('.menu__item--current'), 'menu__item--current');
+						// set current
+						classie.add(item, 'menu__item--current');
+					};
+
+				[].slice.call(menuItems).forEach(function(el) {
+					el.addEventListener('click', setCurrent);
+				});
+			});
+
+			[].slice.call(document.querySelectorAll('.link-copy')).forEach(function(link) {
+				link.setAttribute('data-clipboard-text', location.protocol + '//' + location.host + location.pathname + '#' + link.parentNode.id);
+				new Clipboard(link);
+				link.addEventListener('click', function() {
+					classie.add(link, 'link-copy--animate');
+					setTimeout(function() {
+						classie.remove(link, 'link-copy--animate');
+					}, 300);
+				});
+			});
+		})(window);
+		</script>
 
 
     <script src="js/vendor/jquery.js"></script>
