--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 
     <body>
-<div class="row">
-<div class="small-12 column"id="nav">
-
+<!--Navigation-->
+    <div class="row">
+    <div class="small-12 column"id="nav">
 
   <section class="section section--menu" id="Bagot">
 
@@ -41,12 +41,14 @@
 			</section>
 
     </div>
-<div class="small-12 column"id="about">
+<!--About section-->
+    <div class="small-12 column"id="about">
     <h1>Design Hub</h1>
     <h4>Where perfection meets talent </h4>
     </div>
-</div>
- <div class="row">
+    </div>
+        <!--Portfolio-->
+    <div class="row">
         <div class="small-12 column"id="portfolio">
     <h2>Portfolio</h2>
 
@@ -117,6 +119,31 @@
 			});
 		})(window);
 		</script>
+        <section id="hire">
+    <h1>Contact Me</h1>
+
+    <form>
+	      <div class="field name-box">
+		        <input type="text" id="name" placeholder="Who Are You?"/>
+        		<label for="name">Name</label>
+		        <span class="ss-icon">check</span>
+	      </div>
+
+	      <div class="field email-box">
+		        <input type="text" id="email" placeholder="name@email.com"/>
+		        <label for="email">Email</label>
+		        <span class="ss-icon">check</span>
+	      </div>
+
+	      <div class="field msg-box">
+		        <textarea id="msg" rows="4" placeholder="Your message goes here..."/></textarea>
+		        <label for="msg">Msg</label>
+		        <span class="ss-icon">check</span>
+	      </div>
+
+	      <input class="button" type="submit" value="Send" />
+  </form>
+</section>
 
 
     <script src="js/vendor/jquery.js"></script>
