--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 				<nav class="menu menu--bagot">
 					<ul class="menu__list">
 						<li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
-						<li class="menu__item"><a href="#" class="menu__link">Gallery</a></li>
-						<li class="menu__item"><a href="#" class="menu__link">Clients</a></li>
-						<li class="menu__item"><a href="#" class="menu__link">Shop</a></li>
-						<li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+						<li class="menu__item"><a href="#Portfolio" class="menu__link">Portfolio</a></li>
+						<li class="menu__item"><a href="#Members" class="menu__link">Members</a></li>
+						<li class="menu__item"><a href="#Blog" class="menu__link">Blog</a></li>
+						<li class="menu__item"><a href="#Contact" class="menu__link">Contact</a></li>
 					</ul>
 				</nav>
 
@@ -49,7 +49,7 @@
     </div>
         <!--Portfolio-->
     <div class="row">
-        <div class="small-12 column"id="portfolio">
+        <div class="small-12 column"id="Portfolio">
     <h2>Portfolio</h2>
 
 
